--- a/src/index.css
+++ b/src/index.css
@@ -148,6 +148,7 @@ p, a, h1, h2, h3, h4, h5, h6 {
   font-size: 1.3em;
   display: block;
   position: relative;
+  font-weight: 600;
 }
 
 .funbusi_nav_btn a:hover{
@@ -439,15 +440,23 @@ p, a, h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
-.return {
-  position: fixed;
-  right: 2%;
-  bottom: 4.6%;
-  width: 48px;
-  height: 48px;
-  background: url('./images/chevron-upwards-arrow.png');
-  background-size: 100% 100%;
-  cursor: pointer;
+.thanks {
+  margin-top: 20vh;
+}
+
+.thanks img {
+  display: block;
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
+}
+
+.thanks p {
+  display: block;
+  font-size: 3em;
+  margin: 5vh 18vw 0;
+  text-align: center;
+  color: #fcab2f;
 }
 
 @media screen and (min-width: 992px) {
